@@ -5,6 +5,9 @@
 ## Summary View
 * Updated sparklines
 
+## Timeline View
+* Removed overlapping encounters from C32
+
 - - -
 
 # 2012-01-18
